Getter/Setter generation + tests.